manifests/argocd-istio-resources/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server
spec:
  gateways:
    - os4ml/os4ml-gateway
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - name: "argocd-route"
      match:
        - uri:
            prefix: /argocd/
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
